[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ubiquerg"
version = "0.9.1"
description = "Various utility functions"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
keywords = ["utility", "utilities", "tools"]
authors = [{ name = "Vince Reuter" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pepkit/ubiquerg/"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "-rfE"
testpaths = ["tests"]
markers = ["benchmark: locker performance benchmark tests"]
python_files = "test_*.py"
python_classes = "Test* *Test *Tests *Tester"
python_functions = "test_* test[A-Z]*"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F403", "F405"]
"benchmarks/*" = ["E402"]
